[package]
name = "torut"
version = "0.1.0"
authors = ["teawithsand <teawithsand@gmail.com>"]
edition = "2018"
repository = "https://github.com/teawithsand/torut"

[features]
default = ["serialize", "v2", "v3", "control"]
serialize = ["serde", "serde_derive"]
control = ["tokio", "rand", "base64"]
v2 = ["openssl", "base32", "base64"]
v3 = ["rand", "ed25519-dalek", "base32", "base64"]

[dependencies]
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

derive_more = "0.15.0"

openssl = { version="0.10", optional = true }

sha3 = "0.8" # for onion service v3 signature
sha2 = "0.8" # for ed25519-dalek key
sha1 = "0.6" # for onion service v2 signature

# Required by ed25519-dalek didn't compile for me complaining about rand's crate thread_rng...
ed25519-dalek = { git = "https://github.com/dalek-cryptography/ed25519-dalek", branch="master", optional = true }
rand = { version = "0.7", optional = true }
base32 = { version = "0.4.0", optional = true }
base64 = { version = "0.10", optional = true }

tokio = { version = "0.2", features = ["io-util"], optional = true }

# for fuzzing right now
# TODO(reawithsand): fix it somehow
# tokio = { version = "0.2", optional = true, features = ["full"] }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }