[package]
name = "torut"
version = "0.2.0"
authors = ["teawithsand <teawithsand@gmail.com>"]
edition = "2018"
license = "MIT"
description = "torut is reasonable tor controller written in rust utilizing tokio for async communication"
repository = "https://github.com/teawithsand/torut"
homepage = "https://github.com/teawithsand/torut"
readme = "README.MD"
keywords = ["tor", "controller", "tokio", "onion"]

[features]
default = ["serialize", "v3", "control"]
serialize = ["serde", "serde_derive", "base32", "base64"]
control = ["tokio", "rand", "hex", "sha2", "hmac"]
v3 = ["rand", "ed25519-dalek", "base32", "base64", "sha3"]

[badges]
travis-ci = { repository = "teawithsand/torut", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

derive_more = "0.99"

sha3 = { version = "0.9", optional = true } # for onion service v3 signature
sha2 = { version = "0.9", optional = true } # for ed25519-dalek key
hmac = { version = "0.11", optional = true } # for authentication with tor controller

ed25519-dalek = { version = "1", optional = true }
rand = { version = "0.7", optional = true }
base32 = { version = "0.4", optional = true }
base64 = { version = "0.13", optional = true }
hex = { version = "0.4", optional = true }

tokio = { version = "1", features = ["io-util"], optional = true }

# for fuzzing right now
# TODO(reawithsand): fix it somehow
# tokio = { version = "0.3", optional = true, features = ["full"] }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
